# uatk-spc

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  NOTES.md  README.md  advanced_code_walkthrough.html  advanced_developer_guide.html  advanced_performance.html  build.rs  code_walkthrough.html  code_walkthrough.md  cookbook.md  custom_areas.html  data_sources.html  developer_guide.html  england_outputs.html  environment.yml  fix_quant_data.py  fix_snapshot.py  full_run.sh  generate_manifest.sh  getting_started.html  headless.py  index.html  installation.html  main_model.py  manifest.csv  modelling_methods.html  outputs.html  package-lock.json  performance.html  pyproject.toml  running.html  schema.html  scotland_outputs.html  search.json  select_msoas.py  simulate_gui.py  (+25 more)
app/: index.html
config/: Devon.yml  Input_Devon.csv  Input_TwoCounties.csv  Input_WestYorkshireSmall.csv  TwoCounties.yml  WestYorkshireLarge.yml  bedfordshire.txt  berkshire.txt  birmingham.txt  bristol.csv  bristol.txt  buckinghamshire.txt  cambridgeshire.txt  cheshire.txt  cornwall.txt  cumbria.txt  derbyshire.txt  devon.txt  dorset.txt  durham.txt  east_sussex.txt  east_yorkshire_with_hull.txt  essex.txt  eventDataConcerts.csv  gloucestershire.txt  greater_london.txt  greater_manchester.txt  hampshire.txt  herefordshire.txt  hertfordshire.txt  isle_of_wight.txt  kent.txt  lancashire.txt  leeds.csv  leeds.txt  leicestershire.txt  lincolnshire.txt  liverpool.csv  liverpool.txt  london.csv  (+28 more)
data/: generate_manifest.sh  manifest.csv
dev_app/: index.html
docs/: _quarto.yml  advanced_code_walkthrough.qmd  advanced_performance.qmd  code_walkthrough.md  code_walkthrough.qmd  custom_areas.qmd  data_sources.md  data_sources.qmd  developer_guide.md  developer_guide.qmd  england_outputs.html  england_outputs.qmd  getting_started.md  getting_started.qmd  index.qmd  installation.qmd  modelling_methods.md  modelling_methods.qmd  outputs.md  outputs.qmd  performance.md  performance.qmd  running.qmd  schema.qmd  scotland_outputs.qmd  technical_overview.qmd  transform_it.qmd  troubleshooting.qmd  understanding.qmd  understanding_data_schema.qmd  understanding_data_sources.qmd  understanding_introduction.qmd  understanding_modelling_methods.qmd  understanding_technical_overview.qmd  usage_guide.md  use_output.qmd  using_custom_areas.qmd  using_england_outputs.qmd  using_getting_started.qmd  using_installation.qmd  (+8 more)
improved-doc/: advanced_code_walkthrough.html  advanced_developer_guide.html  advanced_performance.html  code_walkthrough.html  custom_areas.html  data_sources.html  developer_guide.html  england_outputs.html  index.html  installation.html  modelling_methods.html  outputs.html  performance.html  schema.html  scotland_outputs.html  search.json  technical_overview.html  understanding_data_schema.html  understanding_data_sources.html  understanding_introduction.html  understanding_modelling_methods.html  understanding_technical_overview.html  use_output.html  using_custom_areas.html  using_england_outputs.html  using_getting_started.html  using_installation.html  using_outputs.html  using_scotland_outputs.html  using_use_output.html  using_wales_outputs.html  validation.html  wales_outputs.html
improved_doc/: modelling_methods.html  search.json
init/: Cargo.toml
model/: convert_snapshot.py  environment.yml  gui.py  headless.py  pyproject.toml  synthpop_pb2.py
model/aspics/: disease_statuses.py  inspector.py  loader.py  shader.py  simulator.py  snapshot.py  summary.py
model/aspics/doc/: model_design.md
model/aspics/kernels/: prng.cl  ramp_ua.cl
model/ramp/: initial_cases.py  loader.py  shader.py  simulator.py
model/ramp/shaders/: places.frag
model_parameters/: Input_Devon.csv  Input_TwoCounties.csv  Input_WestYorkshireLarge.csv  default.yml
protobuf_samples/: synthpop_pb2.py
python/: README.md  draw_venues.py  main_initialisation.py  main_model.py  protobuf_to_csv.py  protobuf_to_json.py  pyproject.toml  spc_reader.ipynb  synthpop_pb2.py
python/coding/: constants.py  initial_cases.py  inspector.py  opencl_dashboard.py  run.py  shader.py  simulator.py  snapshot.py  snapshot_convertor.py  style.py  summary.py
python/coding/initialise/: activity_location.py  comModule.py  load_msoa_locations.py  population_initialisation.py  quant_api.py  raw_data_handler.py
python/coding/model/: utilities.py
python/coding/model/opencl/: README.md  requirements.txt
python/coding/model/opencl/doc/: model_design.md
python/coding/model/opencl/ramp/: activity.py  buffers.py  inspector.py  kernels.py  params.py  projections.py  run.py  shader.py  simulator.py  snapshot.py  snapshot_convertor.py  summary.py
python/coding/model/opencl/ramp/shaders/: grid.vert
python/coding/shaders/: grid.frag
python/demos/: ASG July 22 Demostration.ipynb
python/examples/: spc_builder_example.ipynb  spc_reader_comparison.ipynb  spc_reader_exploratory.ipynb
python/model_parameters/: Input_Devon.csv  Input_Test_3.csv  Input_Test_30.csv  Input_Test_accross.csv  README.md  default.yml  default_dashboard.yml  no_lockdown.yml
python/ramp/: initialisation_cache.py  run.py  summary.py
python/tests/: test_builder.py  test_reader.py  test_utils.py
python/tests/data/: test_region.pb  test_region_households.pq  test_region_info_per_msoa.json  test_region_people.pq  test_region_time_use_diaries.pq  test_region_venues.pq  test_region_venues_per_activity.json
python/uatk_spc/: __init__.py  builder.py  reader.py  scripts.py  synthpop_pb2.py
ramp/: Cargo.toml  activity.py  buffers.py  constants.py  disease_statuses.py  initial_cases.py  initialisation_cache.py  inspector.py  kernels.py  opencl_dashboard.py  params.py  projections.py  run.py  shader.py  simulator.py  snapshot.py  snapshot_convertor.py  style.py  summary.py
scripts/: check_determinism.sh  collect_stats.py  fix_quant_data.py  fix_snapshot.py  generate_config_files.py  run_pipeline_everywhere.sh  select_msoas.py  upload_data.sh
src/: commuting.rs  json_seq.rs  lib.rs  lockdown.rs  main.rs  make_population.rs  msoa_buildings.rs  (+11 more)
(+254 files in other folders)
