[package]
name = "ramp"
version = "0.1.0"
edition = "2021"
authors = ["Dustin Carlino <dcarlino@turing.ac.uk>"]
description = "Rapid Assistance in Modelling the Pandemic"

[dependencies]
anyhow = "1.0.51"
bincode = "1.3.3"
cap = "0.1.0"
clap = { version = "3.0.0", features = ["derive"] }
csv = "1.1.6"
enum-map = { version = "1.1.1", features = ["serde"] }
flate2 = "1.0.22"
fs-err = "2.6.0"
futures-util = "0.3.19"
geo = { version = "0.18.0", features = ["use-proj", "use-serde"] }
geojson = { version = "0.22.2", features = ["geo-types"] }
indicatif = { git = "https://github.com/mitsuhiko/indicatif", rev = "0e57b21e7ab1752d3796f41fa310bbf96ce5f4ac" }
log = "0.4.14"
ndarray = "0.15.4"
ndarray-npy = "0.8.1"
ndarray-rand = "0.14.0"
ordered-float = "2.8.0"
proj = "0.20.5"
rand = "0.8.4"
reqwest = { version = "0.11.8", features = ["stream"] }
rstar = "0.8.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
shapefile = { version = "0.3.0", features = ["geo-types"] }
simplelog = "0.11.1"
tar = "0.4.38"
tokio = { version = "1.15.0", features = ["full"] }

# See https://doc.rust-lang.org/cargo/reference/profiles.html#overrides. This
# compiles all external dependencies in release mode, yielding great runtime
# speed, but only paying the cost of slow compilation once (since we don't
# update dependencies often).
[profile.dev.package."*"]
opt-level = 3
