[package]
name = "spc"
version = "0.1.0"
edition = "2021"
authors = ["Dustin Carlino <dcarlino@turing.ac.uk>", "Hadrien Salat <hsalat@turing.ac.uk>", "Fernando Benitez <fbenitez@turing.ac.uk>"]
description = "Synthetic Population Catalyst"

[dependencies]
anyhow = "1.0.68"
arrow2 = {version="0.17.3", features = ["io_parquet"]}
bincode = "1.3.3"
bytes = "1.3.0"
cap = "0.1.1"
clap = { version = "4.0.32", features = ["derive"] }
csv = "1.1.6"
derive_more = "0.99.17"
enum-map = { version = "2.4.2", features = ["serde"] }
flate2 = "1.0.25"
fs-err = "2.9.0"
futures-util = "0.3.25"
geo = { version = "0.26.0", features = ["use-serde"] }
geojson = { version = "0.24.0", features = ["geo-types"] }
indicatif = "0.17.2"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
ndarray-rand = "0.14.0"
ordered-float = "3.4.0"
parquet = "44.0.0"
prost = "0.11.5"
rand = "0.8.4"
rand_distr = "0.4.2"
rayon = "1.6.1"
reqwest = { version = "0.11.13", features = ["stream"] }
rstar = "0.11.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_arrow = {version="0.7.1", features = ["arrow2-0-17"]}
serde_jcs = "0.1.0"
shapefile = { version = "0.3.0", features = ["geo-types"] }
strum = "0.26.3"
strum_macros = "0.26.4"
tar = "0.4.38"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
typed-index-collections = { version = "3.1.0", features = ["serde-std"] }

[build-dependencies]
prost-build = "0.11.5"

[dev-dependencies]
hex = "0.4.3"
sha2 = "0.10.6"
tempfile = "3.5.0"

# See https://doc.rust-lang.org/cargo/reference/profiles.html#overrides. This
# compiles all external dependencies in release mode, yielding great runtime
# speed, but only paying the cost of slow compilation once (since we don't
# update dependencies often).
[profile.dev.package."*"]
opt-level = 3
