[tool.poetry]
name = "uatk-spc"
version = "0.1.0"
description = "Python for Synthetic Population Catalyst"
authors = ["Dustin Carlino <dcarlino@turing.ac.uk>", "Hadrien Salat <hsalat@turing.ac.uk>", "Fernando Benitez <fbenitez@turing.ac.uk>", "Sam Greenbury <sgreenbury@turing.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
protobuf = "^4.22.3"
ipykernel = "^6.22.0"
pandas = "^2.0.0"
click = "^8.1.3"
polars = "^0.20.6"
plotly = "^5.15.0"
nbformat = "^5.9.2"
seaborn = "^0.12.2"
pyarrow = "^13.0.0"
pytest = "^7.4.2"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.1"


[tool.poetry.scripts]
spc_to_json = "uatk_spc.scripts:convert_to_json"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
