[tool.poetry]
name = "uatk-spc"
version = "0.1.0"
description = "Python for Synthetic Population Catalyst"
authors = ["Dustin Carlino <dcarlino@turing.ac.uk>", "Hadrien Salat <hsalat@turing.ac.uk>", "Fernando Benitez <fbenitez@turing.ac.uk>", "Sam Greenbury <sgreenbury@turing.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pandas = "^2.0.0"
protobuf = "^4.22.3"
polars = "^0.20.6"
pyarrow = "^13.0.0"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
ipykernel = "^6.22.0"
ipython = "^8.22.1"
nbformat = "^5.9.2"
plotly = "^5.15.0"
scikit-learn = "^1.3.1"
seaborn = "^0.12.2"

[tool.poetry.scripts]
spc_to_json = "uatk_spc.scripts:convert_to_json"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
