[tool.poetry]
name = "uatk-spc"
version = "0.1.0"
description = "Python for Synthetic Population Catalyst"
authors = ["Dustin Carlino <dcarlino@turing.ac.uk>", "Hadrien Salat <hsalat@turing.ac.uk>", "Fernando Benitez <fbenitez@turing.ac.uk>", "Sam Greenbury <sgreenbury@turing.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.3"
pandas = "^2.0.0"
protobuf = "^4.22.3"
polars = "^0.20.6"
pyarrow = "^15.0.0"
typing-extensions = "^4.9.0"

# Optional
pytest = {version="^7.4.2", optional = true}
ipykernel = {version="^6.22.0", optional = true}
ipython = {version="^8.22.1", optional=true}
nbformat = {version="^5.9.2", optional=true}
plotly = {version="^5.15.0", optional=true}
scikit-learn = {version="^1.3.1", optional=true}
seaborn = {version="^0.12.2", optional=true}

[tool.poetry.extras]
dev = ["pytest"]
examples = ["ipykernel", "ipython", "nbformat", "plotly", "scikit-learn", "seaborn"]

[tool.poetry.scripts]
spc_to_json = "uatk_spc.scripts:convert_to_json"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
